--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>She Wear Collections - Premium Women's Fashion & Accessories</title>
-    <meta name="title" content="She Wear Collections - Premium Women's Fashion & Accessories" />
-    <meta name="description" content="Discover the latest trends in women's fashion at She Wear Collections. Shop premium clothing, accessories, and jewelry with secure payments and fast delivery." />
-    <meta name="keywords" content="women's fashion, women's clothing, fashion accessories, online shopping, e-commerce, She Wear, premium fashion, women's jewelry" />
+    <title>She Wear Collections - Premium Women's Fashion</title>
+    <meta name="title" content="She Wear Collections - Premium Women's Fashion" />
+    <meta name="description" content="Discover the latest trends in women's fashion at She Wear Collections. Shop premium clothing with secure payments and fast delivery." />
+    <meta name="keywords" content="women's fashion, women's clothing,online shopping, e-commerce, She Wear, premium fashion" />
     <meta name="author" content="She Wear Collections" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
@@ -16,16 +16,16 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://shewearcollections.com/" />
-    <meta property="og:title" content="She Wear Collections - Premium Women's Fashion & Accessories" />
-    <meta property="og:description" content="Discover the latest trends in women's fashion at She Wear Collections. Shop premium clothing, accessories, and jewelry with secure payments and fast delivery." />
+    <meta property="og:title" content="She Wear Collections - Premium Women's Fashion" />
+    <meta property="og:description" content="Discover the latest trends in women's fashion at She Wear Collections. Shop premium clothing with secure payments and fast delivery." />
     <meta property="og:image" content="https://shewearcollections.com/og-image.jpg" />
     <meta property="og:site_name" content="She Wear Collections" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://shewearcollections.com/" />
-    <meta name="twitter:title" content="She Wear Collections - Premium Women's Fashion & Accessories" />
-    <meta name="twitter:description" content="Discover the latest trends in women's fashion at She Wear Collections. Shop premium clothing, accessories, and jewelry with secure payments and fast delivery." />
+    <meta name="twitter:title" content="She Wear Collections - Premium Women's Fashion" />
+    <meta name="twitter:description" content="Discover the latest trends in women's fashion at She Wear Collections. Shop premium clothing collection with secure payments and fast delivery." />
     <meta name="twitter:image" content="https://shewearcollections.com/og-image.jpg" />
 
     <!-- Additional Meta Tags -->
